--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
     compile 'org.slf4j:slf4j-api:1.7.13'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.192'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.0-groovy-2.4'
